Subi las primera correciones 18 junio

--- a/paper.tex
+++ b/paper.tex
@@ -514,15 +514,17 @@ anodizing process, the samples were rinsed with
 ethanol (purity: 99.9 $ \% $  wt). The electrolytic cell had the shape
 of a rectangular prism as shown in Fig. \ref{fig:DE1}, with a base of
 size $0.62\text{cm}\times2.03\text{cm}$) with an uncovered sample area
-of $1.206\text{cm}^2$. \notaC{Estan son las coordenadas del electrodo} The coordinates the tip of the
-electrode at $\bm
+of $1.206\text{cm}^2$. \notaC{Estan son las coordenadas del electrodo} 
+The coordinates the tip of the electrode at $\bm
 r_0=(x_0,y_0,z_0)=(0.1\text{cm},0.3\text{cm},0.9\text{cm})$
 \notaL{\sout{¿Cuáles fueron las coordenadas del
   electrodo?}} We manufactured samples using a current $I=5\text{mA}$
 which yielded current densities in the range
-$j_\perp=2.5-6.0\text{mA}/\text{cm}^2$ and other samples using a larger
+$j_\perp=2.5-6.0\text{mA}/\text{cm}^2$, which required an attack time of
+$t_1=600 \text{s}$ and other samples using a larger
 current $I=40\text{mA}$ corresponding to current densities in the
-range $j_\perp=20-50\text{mA}/\text{cm}^2$.
+range $j_\perp=20-50\text{mA}/\text{cm}^2$ and $t_2=200 \text{s}$ . \notaC{
+Coloque los tiempo de ataque para $t_1$ y $t_2$}
 \subsection{Morphological studies}
 \label{sec:morph-stud}
 \notaL{Cambié el orden}
@@ -542,8 +544,8 @@ the standard formula \cite{T8,T9} \notaL{\sout{referencia}} for three media air 
  \begin{eqnarray}\label{Eq:ECMR}
    R=\frac{r _ {_ {01}}r _ {_ {12}} e^{2i\delta}}{1+r _ {_ {01}}r _ {_ {12}} e^{2i\delta}}
 \end{eqnarray}
-where $ r_{01} $ y $ r_{12}$ are the Fresnel reflectance
-coefficients at the air/PS and PS/c-Si interfaces \cite{T10,T11}\notaL{\sout{referencias}}
+%where $ r_{01} $ y $ r_{12}$ are the Fresnel reflectance
+coefficients at the air/PS and PS/c-Si interfaces \cite{T10,T11}
 and $\delta=k_{PS}^\perp d$, where $k_{PS}^\perp$ is
 the component of the wavevector perpendicular to the surface within
 the porous layer of thickness $d$.
@@ -553,9 +555,8 @@ The advantage of this method is
 the possibility of taking into account the interface roughness effect
 by including the Davies-Bennett factor in the coefficient of each
 Fresnel cite{I17, I18, I19}, which represents the roughness of a
-Gaussian distribution.}} \notaC{No tenia ninguna relevancia en este 
-punto de la discusión, y si fue una equivocación dejarla hasta el 
-final}
+Gaussian distribution.} \notaC{No tenia ninguna relevancia en este 
+punto de la discusión, y si fue una equivocación dejarla hasta el final}
 
 \subsection{Refraction Index of PS GRIN Single Layers}
 \label{sec:refraction-index-ps}
@@ -913,7 +914,7 @@ $d_L=0.117\mu\text{m}$, $t_L=11\text{s}$.
         ¿no? quité los tiempos pues son los mismos. Quité las
         posiciones pues están descritas antes. Añade una columna
         con las profundidades $d_H$ y $d_L$. }\notaL{De los rótulos de
-      la figura quita las palabras Point. Cambia simulation por Theory.}
+      la figura quita las palabras Point. Cambia simulation por Theory.}}
 	\label{tabla:1}
 \end{table}
 In Fig. \ref{fig:MCGRIN3} we show a photograph of a PS GRIN MC
@@ -946,7 +947,7 @@ region of transparency are similar, though the experimental spectra is
 more rounded and the central resonance is wider. This might be due to
 the roughness of the interfaces, which would lead to some scattering
 whose effects are similar to those of an additional absorption
-\ref{cita el artículo en prensa de Guille y mío}.\notaL{Checar que no
+ref{cita el artículo en prensa de Guille y mío}.\notaL{Checar que no
   diga mentiras arriba. El ajuste es demasiado bueno, pero no sé cómo
   se hizo. Hay que explicar qué significan y de dónde salieron las
   $\lambda_c$ de la tabla. }
