--- a/paper.tex
+++ b/paper.tex
@@ -1,11 +1,12 @@
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{graphicx} % gráficos
-\usepackage[noblocks]{authblk}
-%\usepackage{float}
+%\usepackage[noblocks]{authblk}
+\usepackage{authblk}
+%\usepackage[•]{•}ckage{float}
 %\usepackage{cite}% para contraer referencias
 %\usepackage[usenames]{color}
-%\usepackage{bm}
+\usepackage{bm}
 \usepackage[normalem]{ulem} %opcional para la correcciones
 \newcommand{\abs}[1]{\lvert#1\rvert}
 \usepackage{xcolor}
@@ -14,7 +15,6 @@
 \newcommand{\notaV}[1]{{\color{red}+V:#1+}}
 \title{\textbf{Optimization of Porous Silicon Gradient Refractive
     Index Structures.} }
-% A comparison with computational schemes with experimental results
 \author[1]{C. A. Ospina de la Cruz}
 \author[2]{W. L. Mochán }
 \author[3]{V. Agarwal }
